ARM-TEMPLATES/A10-vThunder_ADC-3NIC-2VM-HA/ARM_TMPL_3NIC_2VM_HA_1.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": {
            "type": "string",
            "defaultValue": "vthunder",
            "metadata": {
                "description": "User name for the Virtual Machine."
            }
        },
       "authenticationType": {
            "type": "string",
            "defaultValue": "password",
            "allowedValues": [
                "sshPublicKey",
                "password"
            ],
            "metadata": {
                "description": "Type of authentication to use on the Virtual Machine. SSH key is recommended."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "SSH Key or password for the Virtual Machine. SSH key is recommended."
            }
        },
        "storageAccountName": {
            "type": "string",
            "defaultValue": "vthunderstorage",
            "metadata": {
                "description": "Storage account Name"
            
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "vnet",
            "metadata": {
                "description": "Virtual Network Name"
            
            }
        },
        "dnsLabelPrefix_vthunder11": {
            "type": "string",
            "defaultValue": "vthunder",
            "metadata": {
                "description": "Unique DNS Name for the Public IP used to access the Virtual Machine1."
            }
        },
        "dnsLabelPrefix_vthunder21": {
            "type": "string",
            "defaultValue": "vthunder",
            "metadata": {
                "description": "Unique DNS Name for the Public IP used to access the Virtual Machine2."
            }
        },
        "vmName_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Name of the Vthunder1"
            }
        },
        "vmName_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Name of the Vthunder2"
            }
        },
        "nic1Name_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic1 for vthunder1"
            }

        },
        "nic2Name_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic2 for vthunder1"
            }

        },
         "nic3Name_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic3 for vthunder1"
            }

        },
        "nic1Name_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic1 for vthunder2"
            }

        },
        "nic2Name_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic2 for vthunder2"
            }

        },
        "nic3Name_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Unique Name of Nic3 for vthunder2"
            }

        },
        "mgmtIntfPrivateAddress_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet1 private ip for vthunder1"
            }

        },
        "eth1PrivateAddress_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet2 private ip for vthunder1"
            }

        },
         "eth2PrivateAddress_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet3 private ip for vthunder1"
            }

        },
        "mgmtIntfPrivateAddress_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet1 private ip for vthunder2"
            }

        },
        "eth1PrivateAddress_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet2 private ip for vthunder2"
            }

        },
         "eth2PrivateAddress_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Enter subnet3 private ip for vthunder2"
            }

        },
        "publicIPAddressName_vthunder1_mgmt": {
            "type": "string",
            "metadata": {
                "description": "unique Public Ip Name for vthunder1"
            }
        },
        "publicIPAddressName_vthunder2_mgmt": {
            "type": "string",
            "metadata": {
                "description": "unique Public Ip Name for vthunder2"
            }
        },
        "networkSecurityGroupName_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "Unique network security group name for vthunder1"
            }
        },
        "networkSecurityGroupName_vthunder2": {
            "type": "string",
            "metadata": {
                "description": "Unique network security group name for vthunder2"
            }
        },
        "mgmtIntfPrivatePrefix_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "subent1 prefix for vthunder1"
            }
        },
        "eth1PrivatePrefix_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "subent2 prefix for vthunder1"
            }
        },
        "eth2PrivatePrefix_vthunder1": {
            "type": "string",
            "metadata": {
                "description": "subent3 prefix for vthunder1"
            }
        },
        "vThunderImage":{
            "type":"string",
            "defaultValue": "vthunder_byol",
            "metadata": {
                "description":"Name of vthunder image"
                }
        },
        "publisherName":{
            "type":"string",
            "metadata": {
                "description":"Name of publisher"
            }

        },
        "productName":{
            "type":"string",
            "metadata": {
                "description":"Name of product"
            }

        },
        "addressPrefixValue": {
            "type": "string",
            "metadata": {
                "description": "address prefix value"
            }
        },
        "vthunderSize": {
            "defaultValue": "Standard_DS2_v2",
            "metadata": {
                "description": "Size of the vthunder"
            },
            "type": "string"
        }
    },
    "variables": {
        "apiVersion": "2015-06-15",
        "location": "[resourceGroup().location]",
        "storageAccountName": "[parameters('storageAccountName')]",
        "storageAccountType": "Standard_GRS",
        "imagePublisher": "a10networks",
        "imageOffer": "a10-vthunder-adc-520-for-microsoft-azure",
        "vnetName": "[parameters('virtualNetworkName')]",
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "addressPrefix": "[parameters('addressPrefixValue')]",
        "subnet1Name_vthunder1": "mgmt_subnetvth1",
        "subnet1Id_vthunder1": "[concat(variables('vnetId'), '/subnets/', variables('subnet1Name_vthunder1'))]",
        "subnet2Name_vthunder1": "data1_subnetvth1",
        "subnet2Id_vthunder1": "[concat(variables('vnetId'), '/subnets/', variables('subnet2Name_vthunder1'))]",
        "subnet3Name_vthunder1": "data2_subnetvth1",
        "subnet3Id_vthunder1": "[concat(variables('vnetId'), '/subnets/', variables('subnet3Name_vthunder1'))]",
        "publicIPAddressType": "Dynamic",
        "publicIPAddressId_vthunder1_mgmt": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddressName_vthunder1_mgmt'))]",
        "publicIPAddressId_vthunder2_mgmt": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddressName_vthunder2_mgmt'))]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[variables('storageAccountName')]",
			"kind":"Storage",
            "properties": {
                "accountType": "[variables('storageAccountType')]"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "name": "[parameters('networkSecurityGroupName_vthunder1')]",
            "location": "[resourceGroup().location]",
            "properties": {
               "securityRules": [
                  {
                     "name": "ssh",
                     "properties": {
                         "description": "ssh-rule",
                         "protocol": "Tcp",
                         "sourcePortRange": "*",
                         "destinationPortRange": "22",
                         "sourceAddressPrefix": "0.0.0.0/0",
                         "destinationAddressPrefix": "*",
                         "access": "Allow",
                         "priority": 1000,
                         "direction": "Inbound",
                         "sourcePortRanges": [],
                         "destinationPortRanges": [],
                         "sourceAddressPrefixes": [],
                         "destinationAddressPrefixes": []
                     }
                 },
                 {
                  "name": "https",
                  "properties": {
                      "description": "https-rule",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1010,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                  "name": "http",
                  "properties": {
                      "description": "http-rule",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "80",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1020,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                  "name": "snmp",
                  "properties": {
                      "description": "snmp-rule",
                      "protocol": "Udp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "161",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1030,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                "name": "ping",
                "properties": {
                    "description": "ping-rule",
                    "protocol": "Icmp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1040,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "ntp",
                "properties": {
                    "description": "ntp-rule",
                    "protocol": "Udp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "123",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1050,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            }

               ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "name": "[parameters('networkSecurityGroupName_vthunder2')]",
            "location": "[resourceGroup().location]",
            "properties": {
               "securityRules": [
                  {
                     "name": "ssh",
                     "properties": {
                         "description": "ssh-rule",
                         "protocol": "Tcp",
                         "sourcePortRange": "*",
                         "destinationPortRange": "22",
                         "sourceAddressPrefix": "0.0.0.0/0",
                         "destinationAddressPrefix": "*",
                         "access": "Allow",
                         "priority": 1000,
                         "direction": "Inbound",
                         "sourcePortRanges": [],
                         "destinationPortRanges": [],
                         "sourceAddressPrefixes": [],
                         "destinationAddressPrefixes": []
                     }
                 },
                 {
                  "name": "https",
                  "properties": {
                      "description": "https-rule",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1010,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                  "name": "http",
                  "properties": {
                      "description": "http-rule",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "80",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1020,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                  "name": "snmp",
                  "properties": {
                      "description": "snmp-rule",
                      "protocol": "Udp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "161",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "*",
                      "access": "Allow",
                      "priority": 1030,
                      "direction": "Inbound",
                      "sourcePortRanges": [],
                      "destinationPortRanges": [],
                      "sourceAddressPrefixes": [],
                      "destinationAddressPrefixes": []
                  }
              },
              {
                "name": "ping",
                "properties": {
                    "description": "ping-rule",
                    "protocol": "Icmp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1040,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            },
            {
                "name": "ntp",
                "properties": {
                    "description": "ntp-rule",
                    "protocol": "Udp",
                    "sourcePortRange": "*",
                    "destinationPortRange": "123",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "*",
                    "access": "Allow",
                    "priority": 1050,
                    "direction": "Inbound",
                    "sourcePortRanges": [],
                    "destinationPortRanges": [],
                    "sourceAddressPrefixes": [],
                    "destinationAddressPrefixes": []
                }
            }

               ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[variables('vnetName')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('subnet1Name_vthunder1')]",
                        "properties": {
                            "addressPrefix": "[parameters('mgmtIntfPrivatePrefix_vthunder1')]"

                        }
                    },
                    {
                        "name": "[variables('subnet2Name_vthunder1')]",
                        "properties": {
                            "addressPrefix": "[parameters('eth1PrivatePrefix_vthunder1')]"
                        }
                    },
                    {
                        "name": "[variables('subnet3Name_vthunder1')]",
                        "properties": {
                            "addressPrefix": "[parameters('eth2PrivatePrefix_vthunder1')]"
                        }
                    }
                ]

            },
               "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName_vthunder1'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName_vthunder2'))]"

            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[parameters('publicIPAddressName_vthunder1_mgmt')]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsLabelPrefix_vthunder11')]"
                },
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
            }
        },
         {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "name": "[parameters('publicIPAddressName_vthunder2_mgmt')]",
            "properties": {
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsLabelPrefix_vthunder21')]"
                },
                "idleTimeoutInMinutes": 30,
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]",
                "[variables('publicIPAddressId_vthunder1_mgmt')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic1Name_vthunder1')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1_vthunder1",
                        "properties": {
                            "privateIPAddress": "[parameters('mgmtIntfPrivateAddress_vthunder1')]",
                            "privateIPAllocationMethod": "Static",
                            "PublicIpAddress": {
                                "Id": "[variables('publicIPAddressId_vthunder1_mgmt')]"
                            },
                            "subnet": {
                                "id": "[variables('subnet1Id_vthunder1')]"
                            }
                        }
                    }

                ],
                 "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName_vthunder1'))]"
                            }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic2Name_vthunder1')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig2_vthunder1",
                        "properties": {
                            "privateIPAddress": "[parameters('eth1PrivateAddress_vthunder1')]",
                            "privateIPAllocationMethod": "Static",
                            "primary": true,
                            "subnet": {
                                "id": "[variables('subnet2Id_vthunder1')]"
                            }
                        }
                    },
                     {
                        "name": "vip",
                        "properties": {
                            "privateIPAllocationMethod": "dynamic",
                            "subnet": {
                                "id": "[variables('subnet2Id_vthunder1')]"
                            }
                        }

                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic3Name_vthunder1')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig3_vthunder1",
                        "properties": {
                            "privateIPAddress": "[parameters('eth2PrivateAddress_vthunder1')]",
                            "privateIPAllocationMethod": "Static",
                            "primary": true,
                            "subnet": {
                                "id": "[variables('subnet3Id_vthunder1')]"
                            }
                        }
                    },
                     {
                        "name": "fip",
                        "properties": {
                            "privateIPAllocationMethod": "dynamic",
                            "subnet": {
                                "id": "[variables('subnet3Id_vthunder1')]"
                            }
                            }
                    }

                ]

            }
        },

        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]",
                "[variables('publicIPAddressId_vthunder2_mgmt')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic1Name_vthunder2')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1_vthunder2",
                        "properties": {
                            "privateIPAddress": "[parameters('mgmtIntfPrivateAddress_vthunder2')]",
                            "privateIPAllocationMethod": "Static",
                            "PublicIpAddress": {
                                "Id": "[variables('publicIPAddressId_vthunder2_mgmt')]"
                            },
                            "subnet": {
                                "id": "[variables('subnet1Id_vthunder1')]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName_vthunder2'))]"
                            }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic2Name_vthunder2')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig2_vthunder2",
                        "properties": {
                            "privateIPAddress": "[parameters('eth1PrivateAddress_vthunder2')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('subnet2Id_vthunder1')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "dependsOn": [
                "[variables('vnetId')]"
            ],
            "location": "[resourceGroup().location]",
            "name": "[parameters('nic3Name_vthunder2')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig3_vthunder2",
                        "properties": {
                            "privateIPAddress": "[parameters('eth2PrivateAddress_vthunder2')]",
                            "privateIPAllocationMethod": "Static",
                            "subnet": {
                                "id": "[variables('subnet3Id_vthunder1')]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[resourceGroup().location]",
            "name": "[parameters('vmName_vthunder1')]",
            "plan": {
                "name": "[parameters('vThunderImage')]",
                "product": "[parameters('productName')]",
                "publisher": "[parameters('publisherName')]"
                },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vthunderSize')]"
                    },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[parameters('vThunderImage')]",
                        "version": "latest"
                        },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('vmName_vthunder1'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": null
                            },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vmName_vthunder1')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "adminPassword": "[parameters('adminPassword')]",
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic1Name_vthunder1'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic2Name_vthunder1'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic3Name_vthunder1'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('http://', variables('storageAccountName'), '.blob.core.windows.net')]"
                    }
                }       
            },
            "dependsOn": [
                "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nic1Name_vthunder1'))]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nic2Name_vthunder1'))]",
                "[concat('Microsoft.Network/networkInterfaces/', parameters('nic3Name_vthunder1'))]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2016-04-30-preview",
            "location": "[resourceGroup().location]",
            "name": "[parameters('vmName_vthunder2')]",
            "plan": {
                "name": "[parameters('vThunderImage')]",
                "product": "[parameters('productName')]",
                "publisher": "[parameters('publisherName')]"
            },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('vthunderSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[parameters('vThunderImage')]",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('vmName_vthunder2'),'_OsDisk')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": null
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('vmName_vthunder2')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "adminPassword": "[parameters('adminPassword')]",
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic1Name_vthunder2'))]",
                            "properties": {
                                "primary": true
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic2Name_vthunder2'))]",
                            "properties": {
                                "primary": false
                            }
                        },
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('nic3Name_vthunder2'))]",
                            "properties": {
                                "primary": false
                            }
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('http://', variables('storageAccountName'), '.blob.core.windows.net')]"
                    }
                }       
      		},
              "dependsOn": [
                  "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]",
                  "[concat('Microsoft.Network/networkInterfaces/', parameters('nic1Name_vthunder2'))]",
                  "[concat('Microsoft.Network/networkInterfaces/', parameters('nic2Name_vthunder2'))]",
                  "[concat('Microsoft.Network/networkInterfaces/', parameters('nic3Name_vthunder2'))]"
                ]
		}
    ],
    "outputs": {
        "sshCommand_vthunder1": {
            "type": "string",
            "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(parameters('publicIPAddressName_vthunder1_mgmt')).dnsSettings.fqdn)]"
        },
        "sshCommand_vthunder2": {
            "type": "string",
            "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(parameters('publicIPAddressName_vthunder2_mgmt')).dnsSettings.fqdn)]"
        }
    }
    
    
}
